fix(ui): ensure container displays entire table even when too wide

--- a/src/pages/employee-list/EmployeeListPage.module.css
+++ b/src/pages/employee-list/EmployeeListPage.module.css
@@ -4,4 +4,5 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+  width: fit-content;
 }
